--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="author" content="Carlos Mur" />
+    <meta name="description" content="Blog en Angular">
+    <meta name="keywords" content="Blog en Vue, Blog, Vue, Firebase, desarrollo web, FrontEnd, CSS3, HTML5, JavaScript, Firebase, Blog Firebase" />    
+    <link rel="icon" href="favicon.ico">
+    <title>Blog en Vue</title>
   </head>
   <body>
     <noscript>
